--- a/uloha_2/index.html
+++ b/uloha_2/index.html
@@ -35,21 +35,21 @@
     Vitajte v cvičení, kde sa naučíte pracovať s textom pomocou CSS. V tomto dokumente nájdete rôzne odstavce a nadpisy, na ktoré budete aplikovať CSS vlastnosti.
 </p>
 
-<div id="font-family">
+<div>
     <h2>1. Font-family</h2>
     <p class="serif">Toto je odstavec s pätkový fontom (serif). Má klasický vzhľad, často sa používa v tlačených knihách a elegantných dizajnoch.</p>
     <p class="sans">Toto je odstavec s bezpätkovým fontom (sans-serif). Je moderný a čistý, ideálny pre webové stránky a digitálny obsah.</p>
     <p class="mono">Toto je odstavec s neproporcionálnym fontom (monospace). Každé písmeno má rovnakú šírku. Používa sa pre kód a technické texty.</p>
 </div>
 
-<div id="font-size">
+<div>
     <h2>2. Font-size</h2>
     <p class="big">Toto je veľký text (32px)</p>
     <p class="medium">Toto je stredný text (20px)</p>
     <p class="small">Toto je malý text (12px)</p>
 </div>
 
-<div id="font-weight">
+<div>
     <h2>3. Font-weight</h2>
     <p class="light">Toto je ľahké písmo (font-weight: 300)</p>
     <p class="normal">Toto je normálne písmo (font-weight: 400)</p>
@@ -57,14 +57,14 @@
     <p class="extra-bold">Toto je veľmi tučné písmo (font-weight: 900)</p>
 </div>
 
-<div id="font-style">
+<div>
     <h2>4. Font-style</h2>
     <p class="normal-style">Toto je normálne písmo (font-style: normal)</p>
     <p class="italic">Toto je kurzíva (font-style: italic)</p>
     <p class="oblique">Toto je šikmé písmo (font-style: oblique)</p>
 </div>
 
-<div id="colors">
+<div>
     <h2>5. Color</h2>
     <p class="red">Tento text je červený</p>
     <p class="blue">Tento text je modrý</p>
@@ -72,7 +72,7 @@
     <p class="purple">Tento text je fialový</p>
 </div>
 
-<div id="align">
+<div>
     <h2>6. Text-align</h2>
     <p class="left">Tento text je zarovnaný vľavo (text-align: left). Je to najčastejšie používané zarovnanie pre bežný text v európskych jazykoch.</p>
     <p class="center">Tento text je zarovnaný na stred (text-align: center). Používa sa pre nadpisy a krátke texty.</p>
@@ -80,14 +80,14 @@
     <p class="justify">Tento text je zarovnaný do bloku (text-align: justify). Ľavý aj pravý okraj sú rovné. Používa sa v knihách a novinách. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </div>
 
-<div id="line-height">
+<div>
     <h2>7. Line-height</h2>
     <p class="lh-small">Toto je text s malým riadkovaním (line-height: 1.2). Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Riadky sú blízko pri sebe.</p>
     <p class="lh-normal">Toto je text s normálnym riadkovaním (line-height: 1.6). Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Toto je optimálne pre čítanie.</p>
     <p class="lh-big">Toto je text s veľkým riadkovaním (line-height: 2.5). Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Riadky sú ďaleko od seba.</p>
 </div>
 
-<div id="letter-spacing">
+<div>
     <h2>8.Letter-spacing</h2>
     <p class="letter-small">Text s malými medzerami medzi písmenami (letter-spacing: -1px)</p>
     <p class="letter-normal">Text s normálnymi medzerami medzi písmenami (letter-spacing: 0px)</p>
@@ -95,47 +95,47 @@
     <p class="letter-extra-big">Text s extra veľkými medzerami (letter-spacing: 10px)</p>
 </div>
 
-<div id="word-spacing">
+<div>
     <h2>9. Word-spacing (medzery medzi slovami)</h2>
     <p class="word-normal">Toto je text s normálnymi medzerami medzi slovami.</p>
     <p class="word-big">Toto je text s väčšími medzerami medzi slovami (word-spacing: 10px).</p>
 </div>
 
-<div id="transform">
+<div>
     <h2>10. Text-transform</h2>
     <p class="upper">tento text je celý veľkými písmenami (text-transform: uppercase)</p>
     <p class="lower">TENTO TEXT JE CELÝ MALÝMI PÍSMENAMI (text-transform: lowercase)</p>
     <p class="capitalize">tento text má veľké prvé písmená (text-transform: capitalize)</p>
 </div>
 
-<div id="decoration">
+<div>
     <h2>11. Text-decoration</h2>
     <p class="underline">Tento text je podčiarknutý (text-decoration: underline)</p>
     <p class="overline">Tento text má čiaru nad (text-decoration: overline)</p>
     <p class="line-through">Tento text je prečiarknutý (text-decoration: line-through)</p>
 </div>
 
-<div id="indent">
+<div>
     <h2>12. Text-indent</h2>
     <p class="indent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Všimnite si, že prvý riadok tohto odstavca je odsadený doprava. Text-indent sa používa v knihách a článkoch na označenie začiatku nového odstavca. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <p class="indent">Aj tento odstavec má odsadený prvý riadok. To vytvára vizuálnu kontinuitu a pomáha čitateľovi rozpoznať začiatok nového odstavca. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </div>
 
-<div id="shadow">
+<div>
     <h2>13. Text-shadow</h2>
     <p class="shadow-light">Tento text má jemný tieň</p>
     <p class="shadow-strong">Tento text má výrazný tieň</p>
     <p class="shadow-color">Tento text má farebný tieň</p>
 </div>
 
-<div id="combo">
+<div>
     <h2>14. Kombinácie</h2>
     <p class="combo-one">Toto je text s viacerými vlastnosťami: tučné, veľké, modré, s tieňom</p>
     <p class="combo-two">Toto je text s inými vlastnosťami: kurzíva, stred, zelené, veľké medzery</p>
     <p class="combo-three">A toto je ďalší text: malé písmo, červené, monospace, podčiarknuté</p>
 </div>
 
-<div id="fonts">
+<div>
     <h2>15. Google Fonts</h2>
     <p class="roboto">Toto je text s Google fontom Roboto</p>
     <p class="playfair">Toto je text s Google fontom Playfair Display</p>
